fixed embed overflow issue

--- a/src/extension/content-script/embed/templates/html.scss
+++ b/src/extension/content-script/embed/templates/html.scss
@@ -27,7 +27,6 @@
 	src: url('./fonts/museo-sans-900.ttf');
 }
 html {
-	overflow: hidden;
 	color: #2A2326;
 }
 body {
